syntax = "proto3";

package userApi.v1;

import "google/api/annotations.proto";

option go_package = "userServer/api/userApi/v1;v1";
option java_multiple_files = true;
option java_package = "dev.kratos.api.userApi.v1";
option java_outer_classname = "UserApiProtoV1";

// The greeting service definition.
service UserQuery {
  // Sends a greeting
  rpc GetUser (GetUserRequest) returns (GetUserReply)  {
    option (google.api.http) = {
      get: "/userApi/{id}"
    };
    }
}

// The request message containing the user's name.
message GetUserRequest {
  int64 id = 1;
}

// The response message containing the greetings
message GetUserReply {
  string name = 1;
}


